tests/paczka1/fuzzy1/66002339.err
Error in line 5: 1xj65OH5 S484 72,1
Error in line 16: 4xSa2 S659 49,8
Error in line 20: 1xj65OH5 S646 99,9
